[workspace]
members = [
    "node",
    "runtime",
    "pallets/eigen",
    "pallets/restaking",
    "pallets/validator_coordination",
    "pallets/actorx",
    "telemetry",
]
resolver = "2"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "thin"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
